added file upload
working on file upload for admin account and file download for user

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,8 +4,9 @@
 $main-color: hsl(216, 100%, 48%);
 $secondary-color: hsl(216, 80%, 48%);
 $bg-grayish: hsl(228, 50%, 96%);
-$select-color: hsl(228, 51%, 88%);
 $bg-white: hsl(0, 0%, 100%);
+$bg-modal-overlay: hsla(0, 0%, 46%, 50%);
+$select-color: hsl(228, 51%, 88%);
 $text-table: hsl(0, 0%, 46%);
 $text-main: hsl(228, 50%, 96%);
 $text-secondary: hsla(228, 50%, 96%, 0.5);
