--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -164,13 +164,18 @@
     }
 }
 
+.counter-app {
+    &__survey-spot {
+        @extend %flex-column;
+    }
+}
+
 //MOVIES TAB
 
 .movies {
-    @extend %flex-column;
 
     &__cell {
-        @extend %flex-row;
+        @extend %flex-column;
 
         b {
             padding: 1rem;
