firebase, backup before cleaning unnecessary files
Firebase integration with app is done in 100% right now, there is only need to add ADMIN account and user auth in future.

Need to clean all files, delete unnecessary and rename/move some.

--- a/src/styles/_modals.scss
+++ b/src/styles/_modals.scss
@@ -20,12 +20,12 @@
     transform: translate(-10%, 15%);
 
     &__keyshortcuts {
+        z-index: 9999;
 
         img {
             width: 100%;
         }
     }
-
 }
 
 .hidden {
