--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+@use './styles/variables'as *;
+
 body {
   margin: 0;
   font-family: 'Inter', sans-serif;
@@ -8,4 +10,13 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+#root {
+  display: flex;
+  flex-flow: row;
+  width: 100%;
+  height: 100vh;
+  background-color: $bg-grayish;
+  box-sizing: border-box;
 }
