--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,4 +1,5 @@
 @use '_variables'as *;
+@use 'animations';
 
 @mixin customScrollBar {
     scrollbar-width: thin;
@@ -16,5 +17,15 @@
         background-color: $thumbBG;
         border-radius: 6px;
         border: 3px solid $scrollbarBG;
+    }
+}
+
+@mixin loadingAnimation($type) {
+    @if $type=='load' {
+        animation: .1s displayAnimation;
+    }
+
+    @else if $type=='login' {
+        animation: .5s ease-in displayAnimation;
     }
 }
